style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

img { max-width: 100%; height: auto; }

[class*=col] { padding: 0; }
[class*="grid-"], [class*="grid_"], [class~="grid"] { margin: 0; }

html {
    overflow-x: hidden;
    scroll-behavior: smooth;
}

/******************** Utility Classes ********************/

.capped-width-wide      { max-width: 1600px; margin: auto; }
.capped-width           { max-width: 1200px; margin: auto; }
.capped-width-narrow    { max-width: 1000px; margin: auto; }
.capped-width-v-narrow  { max-width: 800px;  margin: auto; }

.height-120 { min-height: 120vh;}
.height-100 { min-height: 100vh;}
.height-90  { min-height: 90vh;}
.height-80  { min-height: 80vh;}
.height-70  { min-height: 70vh;}
.height-60  { min-height: 60vh;}
.height-50  { min-height: 50vh;}
.height-40  { min-height: 40vh;}
.height-30  { min-height: 30vh;}

/******************** Padding ********************/

.padded-sm { padding: 2.5%; }
.padded    { padding: 5%;   }
.padded-lg { padding: 10%;  }

.padded-05 { padding: 0.5rem; }
.padded-1  { padding: 1rem; }
.padded-2  { padding: 2rem; }

.padded-t  { padding-top: 5%; }
.padded-b  { padding-bottom: 5%; }
.padded-l  { padding-left: 5%; }
.padded-r  { padding-bottom: 5%; }

.padded-tb  { padding-top: 5%; padding-bottom: 5%; }
.padded-lr  { padding-left: 5%; padding-right: 5%; }
.padded-lg-lr  { padding-left: 10%; padding-right: 10%; }

.padded-t-1 { padding-top: 1rem; }
.padded-b-1 { padding-bottom: 1rem; }
.padded-l-1 { padding-left: 1rem; }
.padded-r-1 { padding-bottom: 1rem; }

.padded-t-2 { padding-top: 2rem; }
.padded-b-2 { padding-bottom: 2rem; }
.padded-l-2 { padding-left: 2rem; }
.padded-r-2 { padding-bottom: 2rem; }

.padded-t-0 { padding-top: 0; }
.padded-b-0 { padding-bottom: 0; }
.padded-l-0 { padding-left: 0; }
.padded-r-0 { padding-bottom: 0; }

#padded {
    padding-top: 5%;
    padding-left: 5%;
    padding-right: 5%;
}

/******************** Margin ********************/

.margin-t { margin-top: 5%; }
.margin-b { margin-bottom: 5%; }
.margin-l { margin-left: 5%; }
.margin-r { margin-right: 5%; }

.margin-t-1 { margin-top: 1rem; }
.margin-b-1 { margin-bottom: 1rem; }
.margin-l-1 { margin-left: 1rem; }
.margin-r-1 { margin-right: 1rem; }

.margin-t-2 { margin-top: 2rem; }
.margin-b-2 { margin-bottom: 2rem; }
.margin-l-2 { margin-left: 2rem; }
.margin-r-2 { margin-right: 2rem; }

.margin-t-0 { margin-top: 0; }
.margin-b-0 { margin-bottom: 0; }
.margin-l-0 { margin-left: 0; }
.margin-r-0 { margin-right: 0; }

.margin-tb { margin-top: 5%; margin-bottom: 5%; }
.margin-lr { margin-left: 5%; margin-right: 5%; }

.negative-margin-left { margin-left: -2rem; }
.negative-margin { margin-top: -20vh; }

/******************** Images ********************/

.wide-landscape { padding-bottom: 30%; }
.landscape     { padding-bottom: 66% ; }
.portrait-tall { padding-bottom: 175%; }
.portrait      { padding-bottom: 125%; }
.square        { padding-bottom: 100%; }

/******************** Typography Style ********************/

/* Fonts: */

.left    { text-align: left; }
.right   { text-align: right; }
.center  { text-align: center; }

/* body {
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
} */

h1 {
    /* font-family: "Spartan", sans-serif; */
    line-height: 1.1;
    /* font-weight: 100; */
}

h2 {
    line-height: 1.1;
    margin-bottom: 3rem;
    /* font-family: "Spartan", sans-serif; */
    /* font-weight: 100; */
}

h3, h4, h5, h6 {
    line-height: 1.1;
    margin-bottom: 3rem;
    /* font-family: "Spartan", sans-serif; */
    /* font-weight: 100; */
}

h1 {font-size: 1.8rem;}
h2 {font-size: 3.1rem;}
h3 {font-size: 1.8rem;}
h4 {font-size: 1.5rem;}

p, li {
    line-height: 1.6; 
    margin-bottom: 1.4rem;
    font-size: 1.1rem;
}

h2:last-child, 
h3:last-child, 
h4:last-child, 
h5:last-child, 
h6:last-child, 
p:last-child { margin-bottom: 0; }

.emphasize {
    /* font-family: "Bitter", serif; */
    /* font-weight: 500; */
    /* font-size: 1.3rem; */
    color: #ffc720;
}

/******************** Links and Buttons ********************/

a {
    text-decoration: none;
    color: inherit;
    transition: all 0.2s;
}

.highlight:hover { color: #ffc720; }

.book-img:hover {
    border: 5px solid white;
    padding: 5px;
}

.decoration-link { border-bottom: solid 2px #ffc720; }

.highlight:hover { color: #ffc720; }

.slick-prev:before,
.slick-next:before {
color: #202a44;
}
.testimonials .slick-dots {
    bottom: 40px;
    color: #202a44;
}

.button {
    display: inline-block;
    border: 1px solid #ffc720;
    padding: 0.5rem 1.5rem;
    border-radius: 50px;
    background-color: #ffc720;
    cursor: pointer;
    transition: all 0.2s;
    /* font-family: "Bitter", serif; */
    /* font-weight: 400; */
    color: #202a44;
    font-size: 0.9rem;
}

.button:hover {
    background-color: #202a44;
    color: #ffc720;
    border: 1px solid #202a44;
}

.button-style2 {
    display: inline-block;
    border: 1px solid #ffc720;
    padding: 0.5rem 1.5rem;
    border-radius: 50px;
    background-color: #ffc720;
    cursor: pointer;
    transition: all 0.2s;
    /* font-family: "Bitter", serif; */
    /* font-weight: 400; */
    color: #202a44;
    font-size: 0.9rem;
}

.button-style2:hover {
    background-color: #3d465c;
    color: #ffc720;
    border: 1px solid #3d465c;
}

/******************** Nav ********************/

header {
    position: fixed;
    width: 100%;
    top: 0;
    left: 0;
    height: 100px;
    transition: 0.5s;
    z-index: 99;
    color: white;
}

header div a { padding: 0.3rem; }
header a { display: inline-block; }
nav { transition: all 0.3s;}

.logo {
    max-width: 4rem;
}

nav.black {
    background-color: #202a44db;
    padding: 0 5%;
}

/******************** Diagonal Boxes ********************/

.diagonal-box {
    background-color: white;
    transform: skewY(-10deg);
    margin-top: -20vh;
}

.content {
    transform: skewY(10deg);
    margin-top: 6vh;
}

.diagonal-box2 {
    background-color: #202a3f;
    transform: skewY(10deg);
    margin-top: -30vh;
    padding-top: 35vh;
    padding-bottom: 120px;
    color: white;
}

.content2 {
    transform: skewY(-10deg);
    margin-top: 6vh;
}

.diagonal-box3 {
    background-color: #202a3f;
    transform: skewY(-10deg);
    color: white;
    margin-top: 70px;
    padding-top: 100px;
}

.content3 {
    transform: skewY(10deg);
}

/******************** Images & Video ********************/

.banner-img {
    background-image: url("https://source.unsplash.com/random");
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    background-color: #202a3f;
    color: white;
}

.carousel-img {
    background-size: cover;
    background-position: center;
    background-color: #202a3f;
    padding-bottom: 34%
}

.affiliere-img {
    background-size: cover;
    background-position: center;
    background-color: #202a3f;
    padding-bottom: 40%
}

.book-img {
    background-size: cover;
    background-position: center;
    background-color: #202a3f;
    padding-bottom: 25%
}

.example-img {
    background-size: cover;
    background-position: center;
    background-color: #202a3f;
    padding-bottom: 20%;
    max-width: 20%;
}

.bg-overlay {
    position: relative;
    z-index: 0;
}

.bg-overlay::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background-color: #202a4492;
    z-index: -1;
}

.small-banner {
    color: white;
    background-color: #202a3f;
    position: relative;
}

.e-book-img {
    float: left;
    max-width: 40%;
    max-height: 40vh;
}

.about-img {
    float: right;
    max-width: 40%;
    max-height: 40vh;
}

.embed-container {
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;
    max-width: 100%;
}

.embed-container iframe,
.embed-container object,
.embed-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.video {
    width: 70vw;
    height: 40vw;
    max-height: 572px;
    position: relative;
    z-index: 1;
}

/******************** Form ********************/

form input {
    margin: 0.5rem 0;
    padding: 0.5rem;
    border: 2px solid #202a3f;
    outline: none;
    font-family: inherit;
    font-size: 0.9rem;
    border-radius: 5px;
    transition: all 0.2s;
}

.email-box {
    min-width: 18rem;
    text-align: center;
}

form input:focus { border-color: #ffc720 }

form button {
    display: inline-block;
    border: 1px solid #ffc720;
    padding: 0.5rem 1.5rem;
    border-radius: 50px;
    background-color: #ffc720;
    cursor: pointer;
    transition: all 0.2s;
    /* font-family: "Bitter", serif; */
    /* font-weight: 400; */
    color: #202a44;
    font-size: 0.9rem;
}

form button:hover {
    background-color: #3d465c;
    color: #ffc720;
    border: 1px solid #3d465c;
}

/******************** Footer ********************/

footer {
    background-color: #202a44;
    color: white;
}

.copyright {
    background-color: rgb(80,80,85);
    color: antiquewhite;
}

.socials {
    font-size: 1.5rem;
}

.socials a {
    margin-left: 0.5rem;
}

